@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6577 2004/07/16 23:01:41 kristerw Exp $
+$NetBSD: CHANGES,v 1.6578 2004/07/16 23:35:20 abs Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3416,3 +3416,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Added ply-1.5 [recht 2004-07-16]
 	Updated thy to 0.9.3 [xtraeme 2004-07-16]
 	Updated vice to 1.14nb1 [kristerw 2004-07-16]
+	Updated mserv_irman to 0.19 [abs 2004-07-17]
+
